--- a/jokes.css
+++ b/jokes.css
@@ -14,6 +14,7 @@ h1 {
   padding: 10px;
   width: 500px;
   height: 300px;
+  font-size:22px;
   color: green;
   font-weight: bold;
   justify-content: center;
